--- a/ПЗ1/ПЗ1.csproj
+++ b/ПЗ1/ПЗ1.csproj
@@ -74,6 +74,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DescriptionController.cs" />
     <Compile Include="MainMenu.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -88,6 +89,13 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TestDesciptionForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="TestDesciptionForm.Designer.cs">
+      <DependentUpon>TestDesciptionForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="TestDescription.cs" />
     <Compile Include="TestPatternYN.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -110,6 +118,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="TestDesciptionForm.resx">
+      <DependentUpon>TestDesciptionForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="TestPatternYN.resx">
       <DependentUpon>TestPatternYN.cs</DependentUpon>
     </EmbeddedResource>
