--- a/ПЗ1/ПЗ1.csproj
+++ b/ПЗ1/ПЗ1.csproj
@@ -74,6 +74,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AnotherProgBar.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="DescriptionController.cs" />
     <Compile Include="MainMenu.cs">
       <SubType>Form</SubType>
@@ -89,6 +92,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StartForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="StartForm.Designer.cs">
+      <DependentUpon>StartForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="TestDesciptionForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -118,6 +127,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="StartForm.resx">
+      <DependentUpon>StartForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="TestDesciptionForm.resx">
       <DependentUpon>TestDesciptionForm.cs</DependentUpon>
     </EmbeddedResource>
